# yidl

./: .gitignore  AGENTS.md  MetaSquaredLog.md  pyproject.toml
dev-docs/: ApiDesignRules.md  AstichiYidlUseCases.md  CodegenRequirements.md  FieldSpecYIDLDesignMatrix.md  FieldSpecYIDLDesignMatrixGaps.md  FieldSpecYIDLDesignMatrixGapsAns.md  IMPL_PROGRESS.md  PRE_IMPL_DESIGN_REVIEW.md  PRE_IMPL_STUDY_DESIGN.md  PRE_IMPL_STUDY_IMPL_PLAN.md  PROCESS.md  RuntimeExtractionPlan.md  YidlArchitecturePosition.md  YidlAstichiBuildMapper.md  YidlAstichiHoleAdoptionPlan.md  YidlBetterMergePlan.md  YidlBetterMergeProposals.md  YidlCapsuleProposal.md  YidlCodingRules.md  YidlContributionBoilerplateReductionPlan.md  YidlDataContainerDesign.md  YidlDataProductionDesign.md  YidlDataProductionPlan.md  YidlDdsGapsVLifecycle.md  YidlDdsGapsVLifecyclePlan.md  YidlDesignSummary-gaps.md  YidlDesignSummary.md  YidlGrammar-update-A-ImplementationPlan.md  YidlGrammar-update-A-plan.md  YidlLifecycleDataModelRequirements.md  YidlLifecycleFieldKindMatrix.md  YidlMatcherProposal.md  YidlMinimalExample.md  YidlPyroCloseTheGapPlan.md  YidlPyroLcmRepresentability.md  YidlPyrolyzeLifecycleParityPlan.md  YidlRecordedCapsuleBuilderDesign.md  YidlRecordedCapsuleBuilderPlan.md  YidlRecordedCapsuleDataDrivenApiProposal.md  YidlRecordedCapsuleResourceModel.md  (+14 more)
docs/: YIDLCodegenDesign.md  YIDLDesign.md  YIDLFrontendDesign.md  YIDLRuntimeClassModel.md
example/: example.yidl  generated_factory_sample.py
spec/: lifecycle_baseline.yidl
tests/: test_ast_tx.py  test_bindings.py  test_bindings_refcount.py  (+12 more)
(+327 files in other folders)
